Little adjustments to avoid errors

--- a/frontend-web/news-app/src/app/core/navbar/navbar.component.html
+++ b/frontend-web/news-app/src/app/core/navbar/navbar.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex shrink-0 items-center">
-          <img class="rounded-full border-white border-2" ngSrc="pxl_logo.png" height="32" width="32" alt="pxl logo">
+          <img class="rounded-full border-white border-2" src="pxl_logo.png" height="32" width="32" alt="pxl logo">
           <span class="self-center text-xl font-bold whitespace-nowrap ml-2 text-white">
       News</span>
         </div>
