--- a/frontend-web/news-app/src/app/core/posts/add-post/add-post.component.html
+++ b/frontend-web/news-app/src/app/core/posts/add-post/add-post.component.html
@@ -31,11 +31,11 @@
       }
     </div>
     <button type="submit" class="bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 mb-2 rounded focus:outline-none focus:shadow-outline"
-            [ngClass]="{'opacity-50 hover:bg-pxlGreen hover:opacity-50 cursor-not-allowed': !postForm.valid}" [disabled]="!postForm.valid">
+            [class]="{'opacity-50 hover:bg-pxlGreen hover:opacity-50 cursor-not-allowed': !postForm.valid}" [disabled]="!postForm.valid">
       Save
     </button>
-    <button (click)="cancel()" class=" text-black hover:text-pxlGreen font-bold py-2 px-4 mb-2 focus:outline-none focus:shadow-outline">
-      Cancel
-    </button>
+<!--    <button (click)="cancel()" class=" text-black hover:text-pxlGreen font-bold py-2 px-4 mb-2 focus:outline-none focus:shadow-outline">-->
+<!--      Cancel-->
+<!--    </button>-->
   </form>
 </div>
