--- a/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
@@ -1,7 +1,7 @@
 @if (post$ | async; as post){
   <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden my-10">
     <div class="relative h-48 flex items-center justify-center overflow-hidden">
-      <img [ngSrc]="'post-backgrounds/' + post.category + '.png'" alt="Card Image" width="900" height="191" >
+      <img [src]="'post-backgrounds/' + post.category + '.png'" alt="Card Image" width="900" height="191" >
     </div>
     <div class="px-6 py-4">
       <div class="font-bold text-xl mb-2">{{post.title}}</div>
@@ -9,7 +9,7 @@
         <span class="inline-flex items-center rounded bg-pxlGreen bg-opacity-20 px-2 py-1 text-sm font-medium text-pxlGreen ring-1 ring-inset ring-pxlGreen ml-2">{{postService.toPascalCasing(post.category)}}</span>
         @if (post.state !== 'PUBLISHED') {
           <span class="inline-flex items-center rounded bg-opacity-20 px-2 py-1 text-sm font-medium ring-1 ring-inset ml-2"
-                [ngClass]="{'bg-gray-500 text-gray-500 ring-gray-500': post.state === 'DRAFTED',
+                [class]="{'bg-gray-500 text-gray-500 ring-gray-500': post.state === 'DRAFTED',
                 'bg-blue-500 text-blue-500 ring-blue-500': post.state === 'SUBMITTED',
                 'bg-pxlGreen text-pxlGreen ring-pxlGreen': post.state === 'APPROVED',
                 'bg-red-500 text-red-500 ring-red-500': post.state === 'REJECTED'}"
