[Fix] Updated frontend code to match backend updates

--- a/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
@@ -1,3 +1,4 @@
+<!--TODO: Update tag styling-->
 @if (post$ | async; as post){
   <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden my-10">
     <div class="relative h-48 flex items-center justify-center overflow-hidden">
