--- a/frontend-web/news-app/src/app/core/posts/post-item/post-item.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-item/post-item.component.html
@@ -17,7 +17,8 @@
         >{{postService.toPascalCasing(post.state)}}</span>
       }
     </div>
-    <p class="text-gray-500 font-medium text-sm my-auto mb-1">By {{authenticationService.getUserById(post.userId)?.fullName}} | {{postService.transformDate(post.createdAt)}}</p>
+    <p class="text-gray-500 font-bold text-sm my-auto mb-1">By {{authenticationService.getUserById(post.userId)?.fullName}}</p>
+    <p class="text-pxlGreen font-medium text-sm my-auto mb-1">{{postService.transformDate(post.createdAt)}}</p>
     <p class="text-gray-500 font-medium text-sm my-auto mb-1"></p>
     <h1 class="text-black font-bold text-xl my-auto mb-2 min-h-40">{{post.title}}</h1>
     <button [routerLink]="[post.id]" class="bg-pxlGreen w-full text-white font-bold py-2 px-2 rounded hover:bg-pxlGreenH">
