--- a/frontend-web/news-app/src/app/core/posts/post-item/post-item.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-item/post-item.component.html
@@ -2,18 +2,22 @@
      [ngClass]="{'border-gray-500': post.state === 'DRAFTED',
       'border-blue-500': post.state === 'SUBMITTED',
       'border-pxlGreen': post.state === 'APPROVED',
-      'border-red-500': post.state === 'REJECTED'}"
+      'border-red-500': post.state === 'REJECTED',
+      'border-yellow-500': post.state === 'PUBLISHED' && mine
+      }"
 >
   <img class="w-full h-36 object-cover" [src]="'post-backgrounds/' + post.category + '.png'" alt="Card image">
   <div class=" px-6 py-4">
     <div class="pb-2">
       <span class="inline-flex items-center rounded bg-pxlGreen bg-opacity-20 px-2 py-1 text-sm font-medium text-pxlGreen ring-1 ring-inset ring-pxlGreen">{{postService.toPascalCasing(post.category)}}</span>
-      @if (post.state !== 'PUBLISHED') {
+      @if (mine) {
         <span class="inline-flex items-center rounded bg-opacity-20 px-2 py-1 text-sm font-medium ring-1 ring-inset ml-2"
               [ngClass]="{'bg-gray-500 text-gray-500 ring-gray-500': post.state === 'DRAFTED',
        'bg-blue-500 text-blue-500 ring-blue-500': post.state === 'SUBMITTED',
        'bg-pxlGreen text-pxlGreen ring-pxlGreen': post.state === 'APPROVED',
-  'bg-red-500 text-red-500 ring-red-500': post.state === 'REJECTED'}"
+       'bg-red-500 text-red-500 ring-red-500': post.state === 'REJECTED',
+       'bg-yellow-500 text-yellow-500 ring-yellow-500': post.state === 'PUBLISHED'
+       }"
         >{{postService.toPascalCasing(post.state)}}</span>
       }
     </div>
