--- a/frontend-web/news-app/src/app/core/filter/filter.component.html
+++ b/frontend-web/news-app/src/app/core/filter/filter.component.html
@@ -8,7 +8,7 @@
         }
         <input type="date" class="px-4 py-2 border-2 rounded shadow" name="date" [(ngModel)]="filter.date">
         <button type="submit" class="ml-2 bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded">Search</button>
-        @if(userRole$ == 'editor' && mine) {
+        @if(mine) {
           <button (click)="addPost()"  class="ml-2 bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded">Add post</button>
         }
       </div>
