--- a/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
@@ -1,5 +1,4 @@
-<!--TODO: Update tag styling-->
-@if (post$ | async; as post){
+@if (post$ | async; as post) {
   <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden my-10">
     <div class="relative h-48 flex items-center justify-center overflow-hidden">
       <img [src]="'post-backgrounds/' + post.category + '.png'" alt="Card Image" width="900" height="191" >
@@ -22,15 +21,33 @@
       <p class="text-black text-justify mb-8">{{post.content}}</p>
 
       @if (userId$ == post.userId) {
-        @if (post.state === 'DRAFTED') {
+        @if (post.state === 'DRAFTED' || post.state === 'REJECTED') {
           <div class="grid grid-cols-2 gap-2">
             <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="submitPost()">Submit</button>
             <button [routerLink]="['/editPost/',post.id]" class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2">Edit</button>
           </div>
           <div id="errorMessage" class="text-red-500 text-sm mt-1"></div>
         }
+        @else if (post.state === 'APPROVED') {
+          <div class="grid grid-cols-3 gap-2">
+            <div></div>
+            <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="publishPost()">Publish</button>
+            <div></div>
+            </div>
+        }
       }
+      @else if (post.state === 'SUBMITTED') {
+          <div class="grid grid-cols-2 gap-2">
+            <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="reviewPost('approve')">Approve</button>
+            <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="reviewPost('reject')">Reject</button>
+          </div>
+        }
       <button routerLink=".." class="w-full text-black font-bold py-2 px-2 rounded hover:text-pxlGreen">Back</button>
     </div>
+    @if (post.state !== 'DRAFTED' && post.state !== 'PUBLISHED' && post.reviews != undefined){
+      @if (post.reviews.length != 0) {
+        <app-review-list [reviews]="post.reviews"></app-review-list>
+      }
+    }
   </div>
 }
