--- a/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
@@ -7,7 +7,7 @@
       <div class="font-bold text-xl mb-2">{{post.title}}</div>
       <p class="text-gray-500 font-medium text-sm my-auto mb-5">By {{authenticationService.getUserById(post.userId)?.fullName}} | {{postService.transformDate(post.createdAt)}}
         <span class="inline-flex items-center rounded bg-pxlGreen bg-opacity-20 px-2 py-1 text-sm font-medium text-pxlGreen ring-1 ring-inset ring-pxlGreen ml-2">{{postService.toPascalCasing(post.category)}}</span>
-        @if (mine) {
+        @if (mine || review) {
           <span class="inline-flex items-center rounded bg-opacity-20 px-2 py-1 text-sm font-medium ring-1 ring-inset ml-2"
                 [ngClass]="{'bg-gray-500 text-gray-500 ring-gray-500': post.state === 'DRAFTED',
                 'bg-blue-500 text-blue-500 ring-blue-500': post.state === 'SUBMITTED',
@@ -28,22 +28,43 @@
           </div>
           <div id="errorMessage" class="text-red-500 text-sm mt-1"></div>
         }
-        @else if (post.state === 'APPROVED') {
+
+        @if (post.state === 'APPROVED') {
           <div class="grid grid-cols-3 gap-2">
             <div></div>
             <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="publishPost()">Publish</button>
             <div></div>
-            </div>
-        }
-      }
-      @else if (post.state === 'SUBMITTED') {
-          <div class="grid grid-cols-2 gap-2">
-            <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="reviewPost('approve')">Approve</button>
-            <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="reviewPost('reject')">Reject</button>
           </div>
         }
-      <button routerLink=".." class="w-full text-black font-bold py-2 px-2 rounded hover:text-pxlGreen">Back</button>
+      }
+        @else {
+          <div class="container mx-auto mt-5 px-2" >
+            <form [formGroup]="commentForm">
+              <div class="mb-4">
+                <label for="content" class="block text-sm/6 font-medium text-gray-900 mb-1">Add comment*</label>
+                <textarea name="content" id="content" formControlName="content" class="h-full shadow border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                          oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea>
+                @if (commentForm.get('content')?.touched && commentForm.get('content')?.hasError('required')){
+                  <div class="text-red-500 text-sm mt-1 hidden">Comment is required</div>
+                }
+              </div>
+            </form>
+          </div>
+          <div class="grid grid-cols-3 gap-2">
+            @if (post.state === 'SUBMITTED') {
+              <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="reviewPost('approve')">Approve</button>
+              <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="reviewPost('reject')">Reject</button>
+              <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="reviewPost('comment')">Comment</button>
+            }
+            @if (post.state === 'REJECTED' || post.state === 'APPROVED') {
+              <div></div>
+              <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="reviewPost('comment')">Comment</button>
+              <div></div>
+            }
+          </div>
+        }
     </div>
+    <button routerLink=".." class="w-full text-black font-bold py-2 px-2 rounded hover:text-pxlGreen">Back</button>
     @if (post.state !== 'DRAFTED' && post.state !== 'PUBLISHED' && post.reviews != undefined){
       @if (post.reviews.length != 0) {
         <app-review-list [reviews]="post.reviews"></app-review-list>
