--- a/frontend-web/news-app/src/app/core/reviews/review-item/review-item.component.html
+++ b/frontend-web/news-app/src/app/core/reviews/review-item/review-item.component.html
@@ -5,14 +5,14 @@
   <p class="col-span-8 inline-block align-middle my-auto text-justify">
     {{ postService.toPascalCasing(review.type) }} by {{authenticationService.getUserById(review.userId)?.fullName}}
     @if(review.content != '') {
-      <span>: {{ review.content }}</span>
+      <span>: <span class="font-bold">{{ review.content }}</span> </span>
     }
   </p>
   <p class="col-span-2 text-gray-500 align-middle my-auto">{{ postService.transformDateShort(review.createdAt) }}</p>
 </div>
 @if(!last) {
   <div class="grid grid-cols-11 gap-2">
-    <div class="col-span-1 "><p class="mx-auto w-fit font-bold text-pxlGreen">|</p></div>
+    <div class="col-span-1"><p class="mx-auto w-fit font-bold text-pxlGreen">|</p></div>
     <div class="col-span-8"></div>
     <div class="col-span-2"></div>
   </div>
