--- a/frontend-web/news-app/src/app/core/filter/filter.component.html
+++ b/frontend-web/news-app/src/app/core/filter/filter.component.html
@@ -3,12 +3,12 @@
     <form #filterForm="ngForm" (ngSubmit)="onSubmit(filterForm)">
       <div class="flex items-center">
         <input type="text" class="px-4 py-2 mr-2 border-2 rounded shadow" placeholder="Search by content" name="content" [(ngModel)]="filter.content">
-        @if (!mine) {
+        @if (!isMine) {
         <input type="text" class="px-4 py-2 mr-2 border-2 rounded shadow" placeholder="Search by author" name="author" [(ngModel)]="filter.author">
         }
         <input type="date" class="px-4 py-2 border-2 rounded shadow" name="date" [(ngModel)]="filter.date">
         <button type="submit" class="ml-2 bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded">Search</button>
-        @if(mine) {
+        @if(isMine) {
           <button (click)="addPost()"  class="ml-2 bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded">Add post</button>
         }
       </div>
