--- a/frontend-web/news-app/src/app/core/navbar/navbar.component.html
+++ b/frontend-web/news-app/src/app/core/navbar/navbar.component.html
@@ -35,7 +35,7 @@
 
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
         @if (localStorage.getItem('userRole') === 'editor'){
-          <button type="button" class="hidden relative ml-3  rounded-full bg-pxlGreen p-1 text-white hover:bg-pxlGreenH">
+          <button (click)="notificationsMenu()" type="button" class="relative ml-3  rounded-full bg-pxlGreen p-1 text-white hover:bg-pxlGreenH">
             <span class="absolute -inset-1.5"></span>
             <svg class="size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
               <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
@@ -57,13 +57,30 @@
                   <img id="profile" class="inline-block rounded-full border-2 border-white"  [src]=" localStorage.getItem('userImage') != null ? localStorage.getItem('userImage') : 'user.png'" alt="user profile">
                   <span class="text-sm font-medium text-white inline-block mx-2 align-middle">{{ localStorage.getItem('userFullName') }}</span>
                 </div>
-
               </button>
             }
           </div>
-            <div [hidden]="userMenuIsHidden" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black/5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-              <a (click)="logout()" class="block px-4 py-2 text-sm text-black hover:bg-gray-100 cursor-pointer" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
-            </div>
+
+          <div [hidden]="notificationsMenuIsHidden" class="absolute right-0 z-10 mt-2 w-80 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black/5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
+            @if(hasNoNotifications) {
+              <p class="block px-4 py-2 text-sm text-black">No notifications</p>
+            }
+
+            @for(notification of notifications$ | async; track notification.id) {
+              <a (click)="openPost(notification.postId)" class="block px-4 py-2 text-sm text-black hover:bg-gray-100 cursor-pointer" role="menuitem" tabindex="-1">
+                {{authenticationService.getUserById(notification.executorId)?.fullName}}
+                @if(notification.action === "REJECTION") {rejected}
+                @else if (notification.action === "APPROVAL") {approved}
+                @else {commented on }
+                your post.
+              </a>
+            }
+
+
+          </div>
+          <div [hidden]="userMenuIsHidden" class="absolute right-0 z-10 mt-2 w-36 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black/5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
+            <a (click)="logout()" class="block px-4 py-2 text-sm text-black hover:bg-gray-100 cursor-pointer" role="menuitem" tabindex="-1">Sign out</a>
+          </div>
         </div>
       </div>
     </div>
@@ -78,7 +95,3 @@
       </div>
     </div>
 </nav>
-
-<!--<div class="bg-green-500 text-white">{{ localStorage.getItem('userRole') != null? localStorage.getItem('userRole') : 'NO ROLE'  + localStorage.getItem('userId') != null ? localStorage.getItem('userId') : 'NO ID' + '.png'}}</div>-->
-
-
