--- a/frontend-web/news-app/src/app/core/reviews/review-list/review-list.component.html
+++ b/frontend-web/news-app/src/app/core/reviews/review-list/review-list.component.html
@@ -1,10 +1,15 @@
 <div class="border-t-2 border-pxlGreen px-6 py-4">
   <div class="font-bold text-xl mb-2">Reviews</div>
-@for(review of reviews; track review.id) {
-    <app-review-item
-      [isToReview]="review"
-      [isLast]="reviews.at(reviews.length - 1) == review"
-    ></app-review-item>
-}
+  @if(reviews.length != 0) {
+    @for(review of reviews; track review.id) {
+          <app-review-item
+            [review]="review"
+            [isLast]="reviews.at(reviews.length - 1) == review"
+          ></app-review-item>
+      }
+  }
+  @else {
+    No reviews yet...
+  }
 </div>
 
