[US12] #13 Implemented user story
Added code to frontend to delete comment

--- a/frontend-web/news-app/src/app/core/comments/comment-item/comment-item.component.html
+++ b/frontend-web/news-app/src/app/core/comments/comment-item/comment-item.component.html
@@ -1,17 +1,24 @@
-<div class="grid grid-cols-11 gap-2 py-2">
+<div (click)="openMenu()"
+     class="grid grid-cols-11 gap-2 py-2 hover:bg-gray-200 hover:cursor-pointer"
+     [ngClass]="{'hover:bg-gray-200 hover:cursor-pointer': comment.userId.toString() == localStorage.getItem('userId')}"
+>
   <div class="col-span-1 align-middle my-auto">
     <img id="profile" class="border-2 border-pxlGreen rounded-full mx-auto" [src]="'user-profiles/' + authenticationService.getUserById(comment.userId)?.role + authenticationService.getUserById(comment.userId)?.id + '.png'" alt="user profile">
   </div>
-  <p class="col-span-8 inline-block align-middle my-auto text-justify">
+  <p class="col-span-8 inline-block align-middle my-auto ">
     {{authenticationService.getUserById(comment.userId)?.fullName}} commented:
-    <span class="font-bold">{{ comment.content }}</span>
+    <span class="font-bold inline-block text-justify">{{ comment.content }}</span>
   </p>
   <p class="col-span-2 text-gray-500 align-middle my-auto">{{ postService.transformDateShort(comment.createdAt) }}</p>
+</div>
+<div [hidden]="menuIsHidden" class="absolute left-80 z-10 mt-2 w-36 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black/5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
+  <a (click)="deleteComment(comment.id)" class="block px-4 py-2 text-sm text-black hover:bg-gray-100 cursor-pointer" role="menuitem" tabindex="-1">Delete</a>
+  <a (click)="updateComment()" class="block px-4 py-2 text-sm text-black hover:bg-gray-100 cursor-pointer" role="menuitem" tabindex="-1">Update</a>
 </div>
 @if(!isLast) {
   <div class="grid grid-cols-11 gap-2">
     <div class="col-span-1"><p class="mx-auto w-fit font-bold text-pxlGreen">|</p></div>
-    <div class="col-span-8"></div>
-    <div class="col-span-2"></div>
   </div>
 }
+
+
