--- a/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
@@ -5,8 +5,8 @@
     </div>
     <div class="px-6 py-4">
       <div class="font-bold text-xl mb-2">{{post.title}}</div>
-      <p class="text-gray-500 font-medium text-sm my-auto mb-5">By {{authenticationService.getUserById(post.userId)?.fullName}} | {{postService.transformDate(post.createdAt)}}
-        <span class="inline-flex items-center rounded bg-pxlGreen bg-opacity-20 px-2 py-1 text-sm font-medium text-pxlGreen ring-1 ring-inset ring-pxlGreen ml-2">{{postService.toPascalCasing(post.category)}}</span>
+      <p class="text-gray-500 font-medium text-sm my-auto mb-5">By {{authenticationService.getUserById(post.userId)?.fullName}} | {{helperService.transformDate(post.createdAt)}}
+        <span class="inline-flex items-center rounded bg-pxlGreen bg-opacity-20 px-2 py-1 text-sm font-medium text-pxlGreen ring-1 ring-inset ring-pxlGreen ml-2">{{helperService.toPascalCasing(post.category)}}</span>
         @if (isMine || isToReview) {
           <span class="inline-flex items-center rounded bg-opacity-20 px-2 py-1 text-sm font-medium ring-1 ring-inset ml-2"
                 [ngClass]="{'bg-gray-500 text-gray-500 ring-gray-500': post.state === 'DRAFTED',
@@ -15,7 +15,7 @@
                 'bg-red-500 text-red-500 ring-red-500': post.state === 'REJECTED',
                 'bg-yellow-500 text-yellow-500 ring-yellow-500': post.state === 'PUBLISHED',
                 }"
-          >{{postService.toPascalCasing(post.state)}}</span>
+          >{{helperService.toPascalCasing(post.state)}}</span>
         }
       </p>
       <p class="text-black text-justify mb-8">{{post.content}}</p>
@@ -34,7 +34,6 @@
             <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="submitPost()">Submit</button>
             <button [routerLink]="['/editPost/',post.id]" class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2">Edit</button>
           </div>
-          <div id="errorMessage" class="text-red-500 text-sm mt-1"></div>
         }
 
         @if (post.state === 'APPROVED') {
@@ -46,20 +45,21 @@
         }
       }
 
-          <div class="container mx-auto mt-5 px-2" >
-            <form [formGroup]="commentForm">
-              <div class="mb-4">
-<!--                @if (isToReview) {-->
-<!--                <label for="content" class="block text-sm/6 font-medium text-gray-900 mb-1">Add comment*</label>-->
-<!--                }-->
+      @if (!(userId$ == post.userId && (post.state === 'SUBMITTED' || post.state === 'APPROVED' || post.state === 'REJECTED'))) {
+        <div class="container mx-auto mt-5 px-2" >
+          <form [formGroup]="commentForm">
+            <div class="mb-4">
                 <textarea name="content" id="content" formControlName="content" class="h-full shadow border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Write comment..."
                           oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea>
-                @if (commentForm.get('content')?.touched && commentForm.get('content')?.hasError('required')){
-                  <div class="text-red-500 text-sm mt-1 hidden">Comment is required</div>
-                }
-              </div>
-            </form>
-          </div>
+              @if (commentForm.get('content')?.touched && commentForm.get('content')?.hasError('required')){
+                <div class="text-red-500 text-sm mt-1 hidden">Comment is required</div>
+              }
+            </div>
+            <div id="errorMessage" class="text-red-500 text-sm mt-1"></div>
+          </form>
+        </div>
+      }
+
       @if(userId$ != post.userId) {
           <div class="grid grid-cols-3 gap-2">
             @if (post.state === 'SUBMITTED') {
