--- a/frontend-web/news-app/src/app/core/posts/post-list/post-list.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-list/post-list.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto mt-5 px-2">
+<div class="container mx-auto mt-5 px-2 mb-6">
   <div class="flex justify-between mb-8">
       <h1 class="text-2xl font-bold inline-block align-bottom py-3 ">
         @if (isMine) {
