[FIX] Solved glitching of the navbar and added notification badge

--- a/frontend-web/news-app/src/app/core/navbar/navbar.component.css
+++ b/frontend-web/news-app/src/app/core/navbar/navbar.component.css
@@ -2,8 +2,11 @@
   display: block;
 }
 
-#profile {
-  object-fit: cover;
+.circle {
   width: 35px;
   height: 35px;
+}
+
+#profile {
+  object-fit: cover;
 }
