--- a/frontend-web/news-app/src/app/core/navbar/navbar.component.html
+++ b/frontend-web/news-app/src/app/core/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex shrink-0 items-center">
           <img class="rounded-full border-white border-2" src="pxl_logo.png" height="32" width="32" alt="pxl logo">
-          <span class="self-center text-xl font-bold whitespace-nowrap ml-2 text-white">
+          <span class="self-center text-xl font-bold whitespace-nowrap ml-2 mr-4 text-white">
       News</span>
         </div>
 
@@ -23,11 +23,13 @@
 
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
         @if (localStorage.getItem('userRole') === 'editor'){
-          <button (click)="notificationsMenu()" type="button" class="relative ml-3  rounded-full bg-pxlGreen p-1 text-white hover:bg-pxlGreenH">
-            <span class="absolute -inset-1.5"></span>
-            <svg class="size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
+          <button (click)="notificationsMenu()" type="button" class="relative ml-3 circle rounded-full bg-pxlGreen border-2 border-pxlGreen text-white hover:bg-pxlGreenH hover:border-pxlGreenH">
+            <svg class="size-6 m-auto" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
               <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
             </svg>
+            @if (!hasNoNotifications){
+            <span class="absolute bottom-6 size-3 left-5 m-auto bg-red-600 rounded-full text-xs"></span>
+            }
           </button>
         }
 
@@ -42,7 +44,7 @@
               <button (click)="userMenu()" class="relative flex rounded-full" id="user-menu-button">
               <span class="absolute -inset-1.5"></span>
                 <div>
-                  <img id="profile" class="inline-block rounded-full border-2 border-white"  [src]=" localStorage.getItem('userImage') != null ? localStorage.getItem('userImage') : 'user.png'" alt="user profile">
+                  <img id="profile" class="inline-block rounded-full border-2 border-white circle"  [src]=" localStorage.getItem('userImage') != null ? localStorage.getItem('userImage') : 'user.png'" alt="user profile">
                   <span class="text-sm font-medium text-white inline-block mx-2 align-middle">{{ localStorage.getItem('userFullName') }}</span>
                 </div>
               </button>
@@ -53,8 +55,7 @@
             @if(hasNoNotifications) {
               <p class="block px-4 py-2 text-sm text-black">No notifications</p>
             } @else {
-              @for(notification of notifications$ | async; track notification.id) {
-                @if(!notification.isRead) {
+              @for(notification of notifications$ ; track notification.id) {
                   <a (click)="openPost(notification.postId, notification.id)" class="block px-4 py-2 text-sm text-black hover:bg-gray-100 cursor-pointer" role="menuitem" tabindex="-1">
                     {{authenticationService.getUserById(notification.executorId)?.fullName}}
                     @if(notification.action === "REJECTION") {rejected}
@@ -62,7 +63,6 @@
                     @else {commented on }
                     your post.
                   </a>
-                }
               }
             }
           </div>
