--- a/frontend-web/news-app/src/app/core/navbar/navbar.component.html
+++ b/frontend-web/news-app/src/app/core/navbar/navbar.component.html
@@ -23,7 +23,7 @@
 
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
         @if (localStorage.getItem('userRole') === 'editor'){
-          <button (click)="notificationsMenu()" type="button" class="relative ml-3 circle rounded-full bg-pxlGreen border-2 border-pxlGreen text-white hover:bg-pxlGreenH hover:border-pxlGreenH">
+          <button (click)="toggleNotificationsMenu()" type="button" class="relative ml-3 circle rounded-full bg-pxlGreen border-2 border-pxlGreen text-white hover:bg-pxlGreenH hover:border-pxlGreenH">
             <svg class="size-6 m-auto" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
               <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
             </svg>
@@ -41,7 +41,7 @@
                 </button>
             }
             @else{
-              <button (click)="userMenu()" class="relative flex rounded-full" id="user-menu-button">
+              <button (click)="toggleUserMenu()" class="relative flex rounded-full" id="user-menu-button">
               <span class="absolute -inset-1.5"></span>
                 <div>
                   <img id="profile" class="inline-block rounded-full border-2 border-white circle"  [src]=" localStorage.getItem('userImage') != null ? localStorage.getItem('userImage') : 'user.png'" alt="user profile">
