--- a/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
@@ -48,7 +48,7 @@
       @if ((post.state === 'SUBMITTED' && userId$ != post.userId) ||
       (post.state === 'APPROVED' && userId$ != post.userId) ||
       (post.state === 'REJECTED' && userId$ != post.userId) ||
-      (post.state === 'PUBLISHED' )) {
+      (post.state === 'PUBLISHED' && userId$)) {
         <div class="container mx-auto mt-5 px-2" >
           <form [formGroup]="commentForm">
             <div class="mb-4">
@@ -79,7 +79,12 @@
 
         @if (post.state === 'PUBLISHED') {
           <div class="grid grid-cols-3 gap-2">
-          <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2 col-start-2" (click)="addComment()">Add comment</button>
+            @if (userId$) {
+           <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2 col-start-2" (click)="addComment()">Add comment</button>
+            }
+            @else {
+              <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2 col-start-2" (click)="login()">Sign up to comment</button>
+            }
           </div>
             }
     </div>
