[FIX] Solved refreshing after deleting comment with Event Emitter

--- a/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
@@ -25,7 +25,7 @@
       }
 
       @if (post.state === 'PUBLISHED' && post.comments != undefined){
-          <app-comment-list [comments]="post.comments"></app-comment-list>
+          <app-comment-list (deleted)="handleDelete()" [comments]="post.comments"></app-comment-list>
       }
 
       @if (userId$ == post.userId) {
