--- a/frontend-web/news-app/src/app/core/comments/comment-list/comment-list.component.html
+++ b/frontend-web/news-app/src/app/core/comments/comment-list/comment-list.component.html
@@ -3,6 +3,7 @@
   @if(comments.length != 0) {
     @for(comment of comments; track comment.id) {
         <app-comment-item
+          (deleted)="handleDelete()"
           [comment]="comment"
           [isLast]="comments.at(comments.length - 1) == comment"
         ></app-comment-item>
